[package]
name = "wpod"
version = "0.3.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.4", features = ["json", "blocking"]}
scraper = "0.15.0"
wallpaper = "3.2.0"
clap = "4.1.8"
serde_json = "1.0.93"
dirs="4.0.0"
chrono="0.4.19"
clokwerk="0.4.0"